--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="container">
             <h1>Bolo de Fubá com Goiabada</h1>
-            <div class="content">
+            <div class="content ingredients">
                 <h2>Ingredientes</h2>
                 <ul>
                     <li class="list_item">1 ovo</li>
@@ -37,8 +37,9 @@
                     <li class="list_item">erva-doce a gosto</li>
                 </ul>
                 <a href=""><div class="button">Comprar Ingredientes</div></a>
+                <!--Pra esse botão a div é totalmente desnecessária, a tag de link ja resolveria o problema-->
             </div>
-            <div class="content">
+            <div class="content preparation">
                 <h2>Modo de Preparo</h2>
                 <ol>
                     <li class="list_item">Misture no liquidificador o ovo, o leite, o óleo, o açúcar, o fubá e bata bem.</li>
@@ -47,7 +48,7 @@
                     <li class="list_item">Leve ao forno médio (180° C), preaquecido, por 40 minutos.</li>
                 </ol>       
             </div>
-            <div class="content">
+            <div class="content instructions">
                 <h2>Instruções Adicionais</h2>
                 <p>
                     Essa receita de bolo de fubá com goiabada é uma delícia, não é mesmo? Quem não gosta de
