--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="pt-BR">
         <meta charset="UTF-8">
+        <!-- <meta name="viewport" content="width=device-width, initia-scale=1,0"> Ajusta a escala dos objetos para celulares-->
         <link rel="stylesheet" href="./css/style.css">
         <title>Página de Receita</title>
 
